# extism

./: .gitignore  Cargo.toml  DEVELOPING.md  LICENSE  Makefile  README.md  composer.json  dscanner.ini  dub.json  dune  dune-project  example-schema.yaml  extism-manifest.opam  extism.go  extism.opam  extism.opam.template  extism_test.go  flake.nix  go.mod  libextism.pc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: browser-ci.yml  ci-cpp.yml  ci-d.yml  ci-dotnet.yml  ci-elixir.yml  ci-go.yml  ci-haskell.yml  ci-java.yml  ci-node.yml  ci-ocaml.yml  ci-php.yml  ci-python.yml  ci-ruby.yml  ci-rust.yml  ci-zig.yml  ci.yml  docs.yml  kernel.yml  release-convert.yaml  release-dotnet-native.yaml  release-dotnet.yaml  release-elixir.yaml  release-haskell.yaml  release-java.yml  release-manifest.yaml  release-node.yaml  release-python.yaml  release-ruby.yaml  release-rust.yaml  release.yml
browser/: .prettierrc  Makefile  README.md  build.js  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
browser/src/: allocator.ts  context.ts  index.test.ts  index.ts  manifest.ts  plugin.ts
c/: Makefile  main.c
convert/: Cargo.toml  README.md
convert-macros/: Cargo.toml
convert-macros/src/: lib.rs
convert-macros/tests/ui/: invalid-encoding.rs  invalid-encoding.stderr
convert/src/: encoding.rs  from_bytes.rs  lib.rs  memory_handle.rs  tests.rs  to_bytes.rs  tracing_event.rs  tracing_log.rs
convert/tests/: test.rs
core/: Cargo.toml  Dockerfile  build.rs
core/src/: manifest.rs  plugin.rs  sdk.rs
cpp/: Makefile  example.cpp  extism.h  extism.hpp
cpp/test/: test.cpp
d/: .gitignore  README.md  extism.d  runtime.c  runtimeWindows.i
d/runtime/: .gitignore
dotnet/: .gitignore  Extism.sln  Extism.sln.DotSettings  ExtismSharp.sln  README.md
dotnet/nuget/: Directory.Build.props  Extism.runtime.all.csproj  Extism.runtime.all.nuspec  Extism.runtime.linux-arm64.csproj  Extism.runtime.linux-musl-arm64.csproj  Extism.runtime.linux-x64.csproj  Extism.runtime.osx-arm64.csproj  Extism.runtime.osx-x64.csproj  Extism.runtime.win-x64.csproj  Extism.runtime.win.csproj  Nuget.sln  README.md
dotnet/src/: Directory.build.props
elixir/: .gitignore  Makefile  README.md  mix.exs
elixir/lib/: extism.ex
elixir/native/extism_nif/: Cargo.toml
elixir/native/extism_nif/.cargo/: config
elixir/native/extism_nif/src/: lib.rs
elixir/test/: extism_test.exs
extism-maturin/: Cargo.toml  build.rs  pyproject.toml
extism-maturin/src/: extism.c  lib.rs
go/: Dockerfile  README.md  code-functions.wasm  go.mod  main.go
go/extism/: extism.go  go.mod  libextism.pc
haskell/: CHANGELOG.md  Example.hs  Makefile  README.md  cabal.project  extism.cabal  stack.yaml
haskell/manifest/: CHANGELOG.md  extism-manifest.cabal
haskell/manifest/Extism/: JSON.hs  Manifest.hs
haskell/src/: Extism.hs
haskell/src/Extism/: Bindings.hs  CurrentPlugin.hs  HostFunction.hs  Manifest.hs
haskell/test/: Test.hs
java/: pom.xml  readme.md
kernel/: .gitignore  Cargo.toml  README.md  build.sh  extism-context.wasm  extism-context.wat  extism-runtime.wasm  rust-toolchain.toml  test.sh  verify.sh
kernel/examples/: alloc_length.rs  error.rs  load_store.rs  reuse.rs
kernel/src/: lib.rs
libextism/: API.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  example.c  extism-static.pc.in  extism.h  extism.pc.in
libextism/src/: lib.rs
manifest/: Cargo.toml  README.md  json_schema.sh  schema.json
manifest/examples/: json_schema.rs
manifest/src/: lib.rs  local_path.rs
node/: .gitignore  Dockerfile  Makefile  README.md  example.js  example.mjs  index.js  package-lock.json  package.json  tsconfig.json  user_code.wasm
node/src/: index.ts
node/tests/: index.test.ts
nuget/: Extism.runtime.osx-x64.csproj  README.md
ocaml/: .ocamlformat  Makefile  README.md  extism.opam  extism.opam.locked
ocaml/lib/: bindings.ml  context.ml  current_plugin.ml  dune  error.ml  extism.ml  extism.mli  function.ml  plugin.ml  types.ml
ocaml/manifest/: dune  extism_manifest.ml  extism_manifest.mli
odin/: Makefile  context.odin  import_headers.c  manifest.odin  plugin.odin  private.odin  util.odin
php/: .gitignore  Example.php  Extism.php  LICENSE.ramsey.txt  Plugin.php  README.md  composer.json  generate.php
php/example/: Example.php  code.wasm  composer.json  index.php
php/src/: Context.php  Extism.php  Plugin.php  extism.h  generate.php
python/: Dockerfile  Makefile  README.md  example.py  pyproject.toml  setup.cfg
python/extism/: __init__.py  extism.py
python/tests/: test_extism.py
ruby/: .gitignore  .yardopts  Dockerfile  GETTING_STARTED.md  Gemfile  Makefile  README.md  Rakefile  code.wasm  example.rb  extism.gemspec
ruby/lib/: extism.rb
ruby/sig/: extism.rbs
ruby/test/: test_extism.rb  test_helper.rb
runtime/: Cargo.toml  README.md  ast.json  build.rs  extism.h  extism.json
runtime/benches/: bench.rs
runtime/examples/: fs.rs  linking.rs  linking_commands.rs  log_callback.rs  readme.rs  tracing.rs
runtime/src/: context.rs  current_plugin.rs  export.rs  extism-runtime.wasm  function.rs  internal.rs  lib.rs  manifest.rs  memory.rs  pdk.rs  plugin.rs  plugin_builder.rs  plugin_ref.rs  pool.rs  readonly_dir.rs  runtime.rs  sdk.rs  tests.rs  timeout_manager.rs  timer.rs  wasi_command.rs
runtime/src/tests/: issues.rs  kernel.rs  mod.rs  pool.rs  runtime.rs
rust/: Cargo.toml  Makefile  build.rs
rust/src/: bindings.rs  context.rs  lib.rs  plugin.rs  plugin_builder.rs
scripts/: bindings.py  header.py  sdk-coverage.py  sdk_coverage.py
wasm/: Makefile  allocations.wasm  code-functions.wasm  code.wasm  command.c  command.wasm  consume.wasm  count_vowels.c  echo.wasm  empty.wasm  globals.wasm  http.wasm  http_headers.wasm  loop.wasm  read_write.wasm  reflect.wasm  unreachable.wasm  upper.wasm
wasm/c-pdk/: extism-pdk.h
wasm/rust-pdk/: Cargo.toml  Makefile
wasm/rust-pdk/examples/: count_vowels.rs
wasm/rust-pdk/src/: bindings.rs  lib.rs
zig/: README.md  build.zig  gyro.zzz  test.wasm  test.zig  zigmod.yml
zig/examples/: basic.zig
(+90 files in other folders)
