[package]
name = "extism-convert"
version = "0.1.0"
edition = "2021"
authors = ["The Extism Authors", "oss@extism.org"]
license = "BSD-3-Clause"
homepage = "https://extism.org"
repository = "https://github.com/extism/extism"
description = "Traits to make Rust types usable with Extism"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.3"
prost = { version = "0.12.0", optional = true }
rmp-serde = { version = "1.1.2", optional = true }
serde = "1.0.186"
serde_json = "1.0.105"

[dev-dependencies]
serde = {version = "1.0.186", features = ["derive"]}

[features]
default = ["msgpack", "protobuf"]
msgpack = ["rmp-serde"]
protobuf = ["prost"]
