[package]
name = "extism-sys"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "extism_sys"
crate-type = ["cdylib"]

[dependencies]
extism = { workspace = true }

[build-dependencies]
cc = "1"
