cabal-version:      3.0
name:               extism
version:            0.0.1
license:            BSD-3-Clause
maintainer:         oss@extism.org
author:             Extism authors
bug-reports:        https://github.com/extism/extism
synopsis:           Extism bindings
description:        Bindings to Extism, the universal plugin system
category:           Plugins, WebAssembly
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Extism
    reexported-modules: Extism.Manifest
    hs-source-dirs:     src
    other-modules:      Extism.Bindings
    default-language:   Haskell2010
    extra-libraries:    extism
    extra-lib-dirs:     /usr/local/lib
    build-depends:
        base >=4 && <5,
        bytestring,
        json,
        manifest

library manifest
    exposed-modules:  Extism.Manifest
    visibility:       public
    hs-source-dirs:   manifest
    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        base64-bytestring,
        json

test-suite extism-example
    type:             exitcode-stdio-1.0
    main-is:          Example.hs
    default-language: Haskell2010
    build-depends:
        base,
        extism,
        bytestring

test-suite extism-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base,
        extism,
        bytestring,
        HUnit
