[package]
name = "libextism"
version = "1.0.0-rc2"
edition = "2021"
authors = ["The Extism Authors", "oss@extism.org"]
license = "BSD-3-Clause"
homepage = "https://extism.org"
repository = "https://github.com/extism/extism"
description = "libextism"

[lib]
name = "extism"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
extism = {path = "../runtime"}

[features]
default = ["http", "register-http", "register-filesystem"]
register-http = ["extism/register-http"] # enables wasm to be downloaded using http
register-filesystem = ["extism/register-filesystem"] # enables wasm to be loaded from disk
http = ["extism/http"] # enables extism_http_request
