[package]
name = "libextism"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
description = "libextism"

[lib]
name = "extism"
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
extism = {workspace = true, path = "../runtime"}

[features]
default = ["http", "register-http", "register-filesystem"]
register-http = ["extism/register-http"] # enables wasm to be downloaded using http
register-filesystem = ["extism/register-filesystem"] # enables wasm to be loaded from disk
http = ["extism/http"] # enables extism_http_request
