[package]
name = "extism-manifest"
description = "Extism plug-in manifest crate"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
base64 = "~0.21"
schemars = { version = "0.8", optional = true }
serde_json = "1"

[features]
json_schema = ["schemars"]

[[example]]
name = "json_schema"
required-features = ["json_schema"]
