[tool.poetry]
name = "extism"
version = "0.0.1-rc.6"
description = "Extism Host SDK for python"
authors = ["The Extism Authors <oss@extism.org>"]
license = "BSD-3-Clause"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.10.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
