[package]
name = "extism"
version = "1.0.0-rc3"
edition = "2021"
authors = ["The Extism Authors", "oss@extism.org"]
license = "BSD-3-Clause"
homepage = "https://extism.org"
repository = "https://github.com/extism/extism"
description = "Extism runtime and Rust SDK"

[dependencies]
wasmtime = ">= 14.0.0, < 16.0.0"
wasmtime-wasi = ">= 14.0.0, < 16.0.0"
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["std", "env-filter", "fmt"]}
url = "2"
glob = "0.3"
ureq = {version = "2.5", optional=true}
extism-manifest = { version = "1.0.0-rc3", path = "../manifest" }
extism-convert = { version = "0.2", path = "../convert" }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[features]
default = ["http", "register-http", "register-filesystem"]
register-http = ["ureq"] # enables wasm to be downloaded using http
register-filesystem = [] # enables wasm to be loaded from disk
http = ["ureq"]          # enables extism_http_request

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
