[package]
name = "extism"
description = "Extism runtime and Rust SDK"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
wasmtime = ">= 20.0.0, < 24.0.0"
wasi-common = ">= 20.0.0, < 24.0.0"
wiggle = ">= 20.0.0, < 24.0.0"
anyhow = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = {version = "0.3.18", features = ["std", "env-filter", "fmt"]}
url = "2"
glob = "0.3"
ureq = {version = "2.5", optional=true}
extism-manifest = { workspace = true }
extism-convert = { workspace = true, features = ["extism-path"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
dashmap = "5.5.3"

[features]
default = ["http", "register-http", "register-filesystem"]
register-http = ["ureq"] # enables wasm to be downloaded using http
register-filesystem = [] # enables wasm to be loaded from disk
http = ["ureq"]          # enables extism_http_request

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
