[package]
name = "extism_nif"
version = "0.2.0"
edition = "2021"
authors = ["Benjamin Eckel <bhelx@simst.im>"]

[lib]
name = "extism_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.27.0"
extism = { version = "0.3.0", path = "../../../rust", package = "extism" }
log = "0.4"
